Fix screens pipeline. Add diff route
